trying to change tile storage & more

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <script src="data/data.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
